# legal-llm-assistant

./: Dockerfile  LICENSE  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  models.py  routes.py
app/core/: config.py  document_processor.py  llm_manager.py  vector_store.py
app/services/: clause_detection.py  extraction.py  qa.py  summarization.py
app/ui/: __init__.py  interface.py
